--- a/articles/ansible/index.yml
+++ b/articles/ansible/index.yml
@@ -11,14 +11,14 @@ metadata:
   ms.tgt_pltfrm: na
   ms.devlang: devops
   ms.topic: landing-page
-  ms.date: 01/18/2018
+  ms.date: 07/05/2018
   ms.author: tarcher
-  ms.openlocfilehash: b3e9ae46eaef25af6d290231a48850cd1ef43153
-  ms.sourcegitcommit: ded74961ef7d1df2ef8ffbcd13eeea0f4aaa3219
+  ms.openlocfilehash: 3d885c6374530884e761ecbee837d6406dd3e894
+  ms.sourcegitcommit: ab3b2482704758ed13cccafcf24345e833ceaff3
   ms.translationtype: HT
   ms.contentlocale: sv-SE
-  ms.lasthandoff: 01/29/2018
-  ms.locfileid: "28207712"
+  ms.lasthandoff: 07/06/2018
+  ms.locfileid: "37868613"
 abstract:
   description: Använd <a href="http://www.ansible.com">Ansible</a> för att automatisera etablering i molnet, konfigurationshantering och programdistribution.
 sections:
@@ -54,6 +54,8 @@ sections:
     className: cardsD
     items:
     - title: Spelboksroller
-      html: <p><a href="https://galaxy.ansible.com/Azure/azure_modules/">azure_module</a></p><p><a href="https://galaxy.ansible.com/Azure/azure_preview_modules/">azure_preview_module</a></p>
+      html: <p><a href="https://galaxy.ansible.com/Azure/azure_preview_modules/">azure_preview_module</a></p>
     - title: Versioner och funktioner
       html: <p><a href="./ansible-matrix.md">Funktionsmatris för moduler och roller</a></p>
+    - title: Verktyg
+      html: <p><a href="https://marketplace.visualstudio.com/items?itemName=vscoss.vscode-ansible">Visual Studio Code-tillägg för Ansible</a></p>
