--- a/articles/ansible/toc.yml
+++ b/articles/ansible/toc.yml
@@ -44,3 +44,7 @@
       href: 'http://docs.ansible.com/ansible/latest/azure_rm_virtualmachine_module.html'
     - name: Alla moduler för Azure
       href: 'http://docs.ansible.com/ansible/latest/list_of_cloud_modules.html#azure'
+- name: Verktyg
+  items:
+    - name: Visual Studio Code-tillägg för Ansible
+      href: 'https://marketplace.visualstudio.com/items?itemName=vscoss.vscode-ansible'
