--- a/articles/automation/TOC.yml
+++ b/articles/automation/TOC.yml
@@ -47,6 +47,8 @@
       items:
         - name: Översikt över Ändringsspårning
           href: automation-change-tracking.md
+        - name: Visa filinnehållet i spårade filer
+          href: change-tracking-file-contents.md
     - name: Inventering
       items:
         - name: Hantera en virtuell dator med inventeringssamling
