--- a/articles/storage/blobs/TOC.yml
+++ b/articles/storage/blobs/TOC.yml
@@ -20,7 +20,9 @@
       href: storage-quickstart-blobs-cli.md
     - name: Arbeta med blobar – .NET
       href: storage-quickstart-blobs-dotnet.md
-    - name: Arbeta med blobar – Java
+    - name: Arbeta med blobar – Java (Storage SDK V10)
+      href: storage-quickstart-blobs-java-v10.md
+    - name: Arbeta med blobar – Java (Storage SDK V7)
       href: storage-quickstart-blobs-java.md
     - name: Arbeta med blobar – Python
       href: storage-quickstart-blobs-python.md
@@ -192,6 +194,8 @@
           href: storage-blob-immutable-storage.md
         - name: Aktivera säker TLS för Azure Storage-klient
           href: ../common/storage-security-tls.md
+        - name: Efterlevnadserbjudanden
+          href: ../common/storage-compliance-offerings.md
     - name: Övervaka och felsök
       items:
         - name: Självstudie om felsökning
