--- a/articles/storage/files/TOC.yml
+++ b/articles/storage/files/TOC.yml
@@ -108,6 +108,8 @@
           href: ../common/storage-dotnet-shared-access-signature-part-1.md?toc=%2fazure%2fstorage%2ffiles%2ftoc.json
         - name: Aktivera säker TLS för Azure Storage-klient
           href: ../common/storage-security-tls.md
+        - name: Efterlevnadserbjudanden
+          href: ../common/storage-compliance-offerings.md
     - name: Övervaka och felsök
       items:
         - name: Felsöka Azure Files-anslutningar – Windows
