--- a/articles/storage/queues/TOC.yml
+++ b/articles/storage/queues/TOC.yml
@@ -98,6 +98,8 @@
           href: ../common/storage-network-security.md?toc=%2fazure%2fstorage%2fqueues%2ftoc.json
         - name: Aktivera säker TLS för Azure Storage-klient
           href: ../common/storage-security-tls.md
+        - name: Efterlevnadserbjudanden
+          href: ../common/storage-compliance-offerings.md
         - name: Kryptering av klientsidan
           items:
             - name: .NET
