--- a/articles/cognitive-services/LUIS/toc.yml
+++ b/articles/cognitive-services/LUIS/toc.yml
@@ -59,16 +59,20 @@
           href: luis-quickstart-intent-and-list-entity.md
         - name: 5. Lägg till hierarkisk entitet
           href: luis-quickstart-intent-and-hier-entity.md
-        - name: 6. Lägg till en enkel entitet och fraslista
+        - name: 6. Lägg till sammansatt entitet
+          href: luis-tutorial-composite-entity.md
+        - name: 7. Lägg till en enkel entitet och fraslista
           href: luis-quickstart-primary-and-secondary-data.md
-        - name: 7. Lägga till keyPhrase-entitet
+        - name: 8. Lägga till keyPhrase-entitet
           href: luis-quickstart-intent-and-key-phrase.md
-        - name: 8. Lägga till attitydanalys
+        - name: 9. Lägga till attitydanalys
           href: luis-quickstart-intent-and-sentiment-analysis.md
     - name: Förbättra appen
       items:
         - name: Granska slutpunktsyttranden
           href: luis-tutorial-review-endpoint-utterances.md
+        - name: Med batch-test
+          href: luis-tutorial-batch-testing.md
         - name: Med mönster
           href: luis-tutorial-pattern.md
 - name: Exempel
@@ -138,7 +142,7 @@
     - name: Planera din app
       href: luis-how-plan-your-app.md
     - name: Starta en ny app
-      href: Create-new-app.md
+      href: luis-how-to-start-new-app.md
     - name: Skapa modell
       items:
         - name: Lägg till avsikter
@@ -147,15 +151,15 @@
           href: luis-how-to-add-example-utterances.md
         - name: Lägg till entiteter
           href: luis-how-to-add-entities.md
-        - name: Använd en sammansatt entitet för att extrahera grupperade data
-          href: luis-tutorial-composite-entity.md
-        - name: Använd en listentitet för att matcha exakt text med Node.js
-          href: luis-tutorial-list-entity.md
-        - name: Skapa en app programmässigt med Node.js
-          href: luis-tutorial-node-import-utterances-csv.md
+        - name: 'Med API:er'
+          items:
+            - name: Skapa en app programmässigt med Node.js
+              href: luis-tutorial-node-import-utterances-csv.md
+            - name: Använd en listentitet för att matcha exakt text med Node.js
+              href: luis-tutorial-list-entity.md
     - name: Integrera
       items:
-        - name: 'Korrekt stavning med API för stavningskontroll i Bing, v7'
+        - name: Med API för Bing-stavningskontroll v7
           href: luis-tutorial-bing-spellcheck.md
         - name: Med Speech-tjänsten
           href: luis-tutorial-speech-to-intent.md
@@ -176,7 +180,7 @@
     - name: Förbättra förutsägelsefunktionen
       items:
         - name: Granska slutpunktsyttranden
-          href: Label-Suggested-Utterances.md
+          href: luis-how-to-review-endoint-utt.md
         - name: Lägg till fraslista
           href: luis-how-to-add-features.md
         - name: Lägg till mönster
@@ -189,36 +193,36 @@
           href: interactive-test.md
         - name: Batch-testning
           href: luis-how-to-batch-test.md
-        - name: Förbättra noggrannheten med batch-testning
-          href: luis-tutorial-batch-testing.md
-    - name: Publicera appen
+    - name: Publicera app
       href: luis-how-to-publish-app.md
     - name: Använd fördefinierade modeller
       items:
-        - name: Använda fördefinierade entiteter
+        - name: Använd enheter
           href: luis-prebuilt-entities.md
-        - name: Använda fördefinierade domäner
+        - name: Använd domäner
           href: luis-how-to-use-prebuilt-domains.md
-        - name: Använda den färdiga Cortana-appen
+        - name: Använd Cortana
           href: luis-how-to-cortana-prebuilt-app.md
-    - name: Hantera LUIS-appen
+    - name: Hantera app
       items:
         - name: Använd instrumentpanelen
           href: luis-how-to-use-dashboard.md
-        - name: Skapa nycklar
+        - name: Skapa slutpunktsnycklar
           href: luis-how-to-azure-subscription.md
-        - name: Lägg till nycklar i LUIS
+        - name: Lägg till slutpunktsnycklar i appen
           href: luis-how-to-manage-keys.md
-        - name: Visa slutpunktsanvändning med PowerShell
-          href: luis-how-to-manage-from-cloud-shell.md
         - name: Hantera versioner
           href: luis-how-to-manage-versions.md
         - name: Samarbeta med andra författare
           href: luis-how-to-collaborate.md
-        - name: Fördela slutpunktskvoten mellan nycklar med Traffic Manager
-          href: traffic-manager.md
-    - name: Hantera ditt LUIS-konto
-      href: luis-how-to-account-settings.md
+        - name: Hantera redigeringsnyckel
+          href: luis-how-to-account-settings.md
+        - name: Hantera slutpunktsanvändning
+          items:
+            - name: Visa slutpunktsanvändning med PowerShell
+              href: luis-how-to-manage-from-cloud-shell.md
+            - name: Fördela slutpunktskvoten mellan nycklar med Traffic Manager
+              href: traffic-manager.md
     - name: Migrera till V2 API
       href: migration-v1-to-v2.md
     - name: Hitta region programmässigt
@@ -251,6 +255,8 @@
           href: luis-reference-prebuilt-deprecated.md
         - name: Entitet för e-post
           href: luis-reference-prebuilt-email.md
+        - name: Entitet för keyPhrase
+          href: luis-reference-prebuilt-keyphrase.md
         - name: Enheter för nummer
           href: luis-reference-prebuilt-number.md
         - name: Entitet för ordningstal
