--- a/articles/devops-project/toc.yml
+++ b/articles/devops-project/toc.yml
@@ -1,4 +1,4 @@
-- name: Dokumentation om Azure DevOps Project
+- name: Dokumentation om Azure DevOps Projects
   href: index.yml
 - name: Översikt
   items:
@@ -8,40 +8,40 @@
   expanded: true
   items:
     - name: .NET
-      href: /vsts/build-release/apps/cd/azure/azure-devops-project-aspnetcore
+      href: /azure/devops-project/azure-devops-project-aspnet-core
       maintainContext: true
     - name: Node.js
-      href: /vsts/build-release/apps/cd/azure/azure-devops-project-nodejs
+      href: /azure/devops-project/azure-devops-project-nodejs
       maintainContext: true
     - name: Java
-      href: /vsts/build-release/apps/cd/azure/azure-devops-project-java
+      href: /azure/devops-project/azure-devops-project-java
       maintainContext: true
     - name: Python
-      href: /vsts/build-release/apps/cd/azure/azure-devops-project-python
+      href: /azure/devops-project/azure-devops-project-python
       maintainContext: true
     - name: PHP
-      href: /vsts/build-release/apps/cd/azure/azure-devops-project-php
+      href: /azure/devops-project/azure-devops-project-php
       maintainContext: true
     - name: Ruby
-      href: /vsts/build-release/apps/cd/azure/azure-devops-project-ruby
+      href: /azure/devops-project/azure-devops-project-ruby
       maintainContext: true
     - name: Go
-      href: /vsts/build-release/apps/cd/azure/azure-devops-project-go
+      href: /azure/devops-project/azure-devops-project-go
       maintainContext: true
 - name: Självstudier
   items:
     - name: 1 – GitHub och DevOps Project
-      href: /vsts/build-release/actions/azure-devops-project-github
+      href: azure-devops-project-github.md
       maintainContext: true
     - name: 2 – Distribuera till virtuella datorer
-      href: /vsts/build-release/actions/azure-devops-project-vms
+      href: azure-devops-project-vms.md
       maintainContext: true
-    - name: 3 – Distribuera till Azure SQL DB
-      href: /vsts/build-release/actions/azure-devops-project-sqldb
+    - name: 3 – Distribuera till Azure SQL Database
+      href: azure-devops-project-sql-database.md
       maintainContext: true
     - name: 4 – Distribuera till AKS
-      href: /vsts/build-release/actions/azure-devops-project-aks
+      href: azure-devops-project-aks.md
       maintainContext: true
     - name: 5 – Distribuera till Azure Service Fabric
-      href: /vsts/build-release/actions/azure-devops-project-servicefabric
+      href: azure-devops-project-service-fabric.md
       maintainContext: true
