--- a/articles/migrate/toc.yml
+++ b/articles/migrate/toc.yml
@@ -40,6 +40,8 @@
           href: contoso-migration-refactor-web-app-sql.md
         - name: 10. Contoso – Omstrukturera en Linux-app på Azure Web Apps och Azure MySQL
           href: contoso-migration-refactor-linux-app-service-mysql.md
+        - name: 11. Contoso – Migrera TFS till VSTS
+          href: contoso-migration-tfs-vsts.md
     - name: Utforska och utvärdera en stor miljö
       href: how-to-scale-assessment.md
     - name: Gruppera datorer
