--- a/articles/security/TOC.yml
+++ b/articles/security/TOC.yml
@@ -194,6 +194,10 @@
           href: ./blueprints/fedramp-iaaswa-overview.md
         - name: PaaS-webbprogram
           href: ./blueprints/fedramp-paaswa-overview.md
+    - name: Betrodd Internetanslutning
+      items:
+        - name: Betrodd Internetanslutning med Azure
+          href: ./compliance/compliance-tic.md
     - name: PCI DSS
       items:
         - name: Datanalys
